# hydrogen_concentration_detection

./: .gitignore  README.md  pyproject.toml
hydrogen_concentration/: data_analysis.ipynb  preprocessing.py  train.py
